== 0.5.4

* Enhancements
  * Updated to Rails 3.2.8
    * Removed deprecated use of update_attribute for Rails 4.0 compatibility

* Refactoring
  * Mass-assignment attr_accessible and params slicing implemented to leverage Rails 3.2.x configuration defaults

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

== 0.5.3

* Enhancements
  * Update to Rails 3.2.6 and Contour 1.0.2
  * Update to Ruby 1.9.3-p194

== 0.5.2

* Enhancements
  * Update to Rails 3.2.2 and Contour 0.10.2 with Contour-Minimalist theme
  * External User ID now shown on downloaders index

== 0.5.1

* Refactoring
  * Gem dependencies updated:
    * Rails 3.2.0
    * Contour ~> 0.9.3
  * Devise migration and configuration file updated
  * Environment files updated to be in sync with Rails 3.2.0

== 0.5.0

* Enhancements
  * Update to Rails 3.2.0.rc2 and Contour 0.9.0
  * Downloaders now have the following changes:
    * Downloaders are now associated with an external user
    * Downloaders are now identifiable by a digest of the file names
    * Tracking now exists per user per file by
      * Count of checksum requests
      * Count of file download requests
  * Segments now have the following changes:
    * Segments have a many to many associate with downloaders
    * A segment's file checksum is not computed until it is specifically requested through a download checksum request
  * JSON messaging has been implemented for downloaders, XML messaging will be deprecated in a future release

* Testing
  * SimpleCov added for test coverage
  * TravisCI configuration files added

* Bug Fix
  * Logging in as a valid user no longer creates a redirect loop

== 0.4.0

* Enhancements
  * Pagination added to downloaders and segments index pages

* Documentation
  * Default database for windows is now set to pg instead of sqlite3
  * The default downloader type is now a Ruby program wrapped inside of an executable that uses Ruby Net class to incrementally download files