@@ -5,6 +5,14 @@ class ApplicationController < ActionController::Base
 
   protected
 
+  def scrub_order(model, params_order, default_order)
+    (params_column, params_direction) = params_order.to_s.strip.downcase.split(' ')
+    direction = (params_direction == 'desc' ? 'DESC' : nil)
+    column_name = (model.column_names.collect{|c| model.table_name + "." + c}.select{|c| c == params_column}.first)
+    order = column_name.blank? ? default_order : [column_name, direction].compact.join(' ')
+    order
+  end
+
   def check_system_admin
     redirect_to root_path, alert: "You do not have sufficient privileges to access that page." unless current_user.system_admin?
   end
