@@ -32,11 +32,16 @@ class DownloadersController < ApplicationController
 
   def index
     # current_user.update_column :downloaders_per_page, params[:downloaders_per_page].to_i if params[:downloaders_per_page].to_i >= 10 and params[:downloaders_per_page].to_i <= 200
-    @order = params[:order].blank? ? 'downloaders.name' : params[:order]
+
     downloader_scope = current_user.all_downloaders
     @search_terms = params[:search].to_s.gsub(/[^0-9a-zA-Z]/, ' ').split(' ')
     @search_terms.each{|search_term| downloader_scope = downloader_scope.search(search_term) }
+
+    @order = scrub_order(Downloader, params[:order], 'downloaders.name')
     downloader_scope = downloader_scope.order(@order)
+
+    @downloader_count = downloader_scope.count
+
     @downloaders = downloader_scope.page(params[:page]).per(20) #(current_user.downloaders_per_page)
     respond_to do |format|
       format.html
