@@ -17,12 +17,16 @@ class UsersController < ApplicationController
 
   def index
     current_user.update_column :users_per_page, params[:users_per_page].to_i if params[:users_per_page].to_i >= 10 and params[:users_per_page].to_i <= 200
-    @order = params[:order].blank? ? 'users.current_sign_in_at DESC' : params[:order]
-    users_scope = User.current
+
+    user_scope = User.current
     @search_terms = params[:search].to_s.gsub(/[^0-9a-zA-Z]/, ' ').split(' ')
-    @search_terms.each{|search_term| users_scope = users_scope.search(search_term) }
-    users_scope = users_scope.order(@order)
-    @users = users_scope.page(params[:page]).per(current_user.users_per_page)
+    @search_terms.each{|search_term| user_scope = user_scope.search(search_term) }
+
+    @order = scrub_order(User, params[:order], 'users.current_sign_in_at DESC')
+    user_scope = user_scope.order(@order)
+
+    @count = user_scope.count
+    @users = user_scope.page(params[:page]).per(current_user.users_per_page)
   end
 
   def show
