@@ -1,4 +1,4 @@
-<%= render partial: 'contour/layouts/per_page', locals: { type: 'downloaders' } %>
+<%= render partial: 'contour/layouts/per_page', locals: { type: 'downloaders', object_count: @downloader_count } %>
 
 <table class="table table-striped table-bordered" style="width:100%">
   <thead>
