@@ -1,4 +1,4 @@
-<%= render partial: 'contour/layouts/per_page', locals: { type: 'segments' } %>
+<%= render partial: 'contour/layouts/per_page', locals: { type: 'segments', object_count: @segment_count } %>
 
 <table class="table table-striped table-bordered" style="width:100%">
   <thead>
